# tts_webui_extension.megatts3

./: README.md  pyproject.toml  setup.py
tts_webui_extension/megatts3/: __init__.py  main.py  tts.py  ui.py
