[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.megatts3"
version = "0.0.1"
description = "A template extension for TTS Generation WebUI"
readme = "README.md"
authors = [
    {name = "Your Name"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tts-webui.megatts3>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.megatts3"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
